create navbar html and burger-button

--- a/src/index.pug
+++ b/src/index.pug
@@ -7,5 +7,5 @@ html(lang="ru")
         link(rel="stylesheet", href="main.css")
         title Фабрика скинали
     body
-        h1.header Хай
-        
+        include modules/header/header
+                
