--- a/src/main.sass
+++ b/src/main.sass
@@ -1,2 +1,31 @@
-.header
-    color: pink
+//*********************************************
+//		Base
+//*********************************************
+@import "_base/reset"
+@import "_base/variables"
+@import "_base/fonts"
+@import "_base/mixins"
+@import "_base/custom"
+
+//*********************************************
+//		Header
+//*********************************************
+
+@import "modules/header/header"
+
+
+//*********************************************
+//		Navbar
+//*********************************************
+
+@import "modules/navbar/navbar"
+
+
+
+//*********************************************
+//		Small elements
+//*********************************************
+
+// button-burger
+    
+@import "modules/button-burger/button-burger"
