--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -1,5 +1,12 @@
 body
     +light
 .container
-    width: 60.9375%
+    width: 1170px
     margin: 0 auto
+    font-size: 25px
+
++max-screen(1170px)
+    html
+        font-size: 14px
+    .container
+        width: 990px
