--- a/src/_base/fonts.sass
+++ b/src/_base/fonts.sass
@@ -1,6 +1,6 @@
 @font-face
 	font-family: "ProximaNova"
-	src: url("../dist/fonts/FontsFree-Net-Proxima-Nova-Bold.otf")
+	src: url("../dist/fonts/ProximaNova-Semibold.ttf")
 	font-style: normal
 	font-weight: 800
 @font-face
