--- a/src/main.sass
+++ b/src/main.sass
@@ -26,6 +26,11 @@
 //		Small elements
 //*********************************************
 
+// button
+@import "modules/button/button"
 // button-burger
-    
 @import "modules/button-burger/button-burger"
+// logo
+@import "modules/logo/logo"
+// phone
+@import "modules/phone/phone"
