--- a/src/modules/button-burger/button-burger.sass
+++ b/src/modules/button-burger/button-burger.sass
@@ -1,21 +1,18 @@
 .button-burger
     width: 6.06837607%
-    padding: 2.64957265% // это
-    padding: 2.64957265% 2.13675214% // это
+    padding: 3.3% 0 // это
     border: none
     border-left: 1px solid #ede6f8
     border-right: 1px solid #ede6f8
-    background: none // это
-    outline: none // это
-    cursor: pointer  // это
-    // display: flex // это
-    // justify-content: center // это
-    // align-items: center // это
+    background: none
+    outline: none
+    cursor: pointer 
+    display: flex // это
+    justify-content: center // это
+    align-items: center // это
     &__line
-        width: 100%
-        padding: 7.89473684% 0 // это
-        // min-width: 20px // это
-        // height: 3px // это
+        width: 20px
+        height: 3px
         background-color: $blue
         position: relative
         &:before, &:after
