--- a/src/modules/navbar/navbar.sass
+++ b/src/modules/navbar/navbar.sass
@@ -1,7 +1,16 @@
 .navbar
     display: flex
     align-items: center
-    height: 100%
+    justify-content: flex-start
+    min-height: 80px
     font-size: 1rem
-    // min-height: 80px
 
+    &__logo
+        margin-left: 2.5641%
+    &__mobile
+        margin-left: 17.6923%
+    &__stationary
+        margin-left: 9.5726%
+    &__button
+        // margin-left: 2.5641%
+        margin-left: auto
