add navbar and hero block without adaptive

--- a/src/main.sass
+++ b/src/main.sass
@@ -19,6 +19,8 @@
 //*********************************************
 
 @import "modules/navbar/navbar"
+// menu (burger - toggle)
+@import "modules/navbar/menu"
 
 
 
@@ -34,3 +36,5 @@
 @import "modules/logo/logo"
 // phone
 @import "modules/phone/phone"
+// hero
+@import "modules/hero/hero"
