--- a/src/modules/button/button.sass
+++ b/src/modules/button/button.sass
@@ -21,3 +21,9 @@
         &:hover
             background-color: $blue
             color: #ffffff
+
+    &--hero
+        line-height: .7
+        padding: 2.13675% 3.84615%
+        &:hover
+            background-color: #3866c7
