--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -9,3 +9,19 @@ body
         font-size: 14px
     .container
         width: 990px
+
++max-screen(1024px)
+    .container
+        width: 760px
+
+
++max-screen(760px)
+    .container
+        width: 540px
+
+
++max-screen(540px)
+    html
+        font-size: 10px
+    .container
+        width: 290px
