--- a/src/modules/button-burger/button-burger.sass
+++ b/src/modules/button-burger/button-burger.sass
@@ -43,3 +43,10 @@
             transform: rotate(-45deg)
             bottom: 0
             width: 100%
+
+
+
++max-screen(760px)
+    .button-burger
+        padding: 0
+        border: none
