--- a/src/modules/header/header.sass
+++ b/src/modules/header/header.sass
@@ -20,3 +20,12 @@
         visibility: visible
         top: 80px
         pointer-events: auto
+
+
++max-screen(760px)
+    .header__menu-display
+        top: 65px
+
++max-screen(540px)
+    .header__menu-display
+        top: 50px
