--- a/src/modules/logo/logo.sass
+++ b/src/modules/logo/logo.sass
@@ -13,3 +13,11 @@
     &__description
         color: $text-color-light
         font-size: 0.875rem
+
++max-screen(540px)
+    .logo
+        &__title
+            margin-bottom: 0
+            font-size: 1rem
+        &__description
+            font-size: .7rem
