--- a/src/modules/hero/hero.sass
+++ b/src/modules/hero/hero.sass
@@ -3,12 +3,27 @@
     background-size: contain
     padding-top: 10.4166%
     padding-bottom: 14.0625%
+    font-size: 1.875rem
     &__title
-        font-size: 1.875rem
         margin-bottom: 3%
     &__subtitle
-        font-size: 1.875rem
         +bold
         margin-bottom: 5%
     
     
++max-screen(1400px)
+    .hero
+        font-size: 1.5rem
++max-screen(1200px)
+    .hero
+        padding-top: 15%
+        font-size: 1.5rem
+       
++max-screen(760px)
+    .hero
+        background-position: center top 65px
+        padding-top: 20%
+        font-size: 1rem
++max-screen(540px)
+    .hero
+        background-position: center top 50px
