сделана форма, без селекта

--- a/src/_base/fonts.sass
+++ b/src/_base/fonts.sass
@@ -1,11 +1,11 @@
 @font-face
 	font-family: "ProximaNova"
-	src: url("../dist/fonts/ProximaNova-Semibold.ttf")
+	src: url("./fonts/ProximaNova-Semibold.ttf")
 	font-style: normal
 	font-weight: 800
 @font-face
 	font-family: "ProximaNova"
-	src: url("../dist/fonts/FontsFree-Net-Proxima-Nova-Light.otf")
+	src: url("./fonts/FontsFree-Net-Proxima-Nova-Light.otf")
 	font-style: normal
 	font-weight: 100
 
