--- a/src/index.pug
+++ b/src/index.pug
@@ -8,4 +8,6 @@ html(lang="ru")
         title Фабрика скинали
     body
         include modules/header/header
+        .main
+            include modules/offer/offer
                 
