--- a/src/main.sass
+++ b/src/main.sass
@@ -10,17 +10,20 @@
 //*********************************************
 //		Header
 //*********************************************
-
 @import "modules/header/header"
+
+//*********************************************
+//		Navbar
+//*********************************************
+@import "modules/navbar/navbar"
+// menu (burger - toggle)
+@import "modules/navbar/menu"
 
 
 //*********************************************
 //		Navbar
 //*********************************************
-
-@import "modules/navbar/navbar"
-// menu (burger - toggle)
-@import "modules/navbar/menu"
+@import "modules/offer/offer"
 
 
 
@@ -38,3 +41,5 @@
 @import "modules/phone/phone"
 // hero
 @import "modules/hero/hero"
+// form
+@import "modules/form/form"
