--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -4,6 +4,9 @@ body
     width: 1170px
     margin: 0 auto
 
+.bg-section
+    background-color: $bg-section
+
 +max-screen(1170px)
     html
         font-size: 14px
