--- a/src/modules/button/button.sass
+++ b/src/modules/button/button.sass
@@ -27,3 +27,10 @@
         padding: 2.13675% 3.84615%
         &:hover
             background-color: #3866c7
+
+    &--form
+        width: 100%
+        padding: 11.6666% 0
+        line-height: .9
+        &:hover
+            background-color: #3866c7
