advantages section add && adaptive

--- a/src/main.sass
+++ b/src/main.sass
@@ -21,9 +21,14 @@
 
 
 //*********************************************
-//		Navbar
+//		offer
 //*********************************************
 @import "modules/offer/offer"
+
+//*********************************************
+//		advantages
+//*********************************************
+@import "modules/advantages/advantages"
 
 
 
