--- a/src/modules/offer/offer.sass
+++ b/src/modules/offer/offer.sass
@@ -1,5 +1,7 @@
 .offer
-    // padding: 15.10% 0
+    // padding: 0 0 6.51% 0
+    &__block
+        transform: translateY(-20%)
     &__title
         margin-bottom: 2.2%
         text-transform: uppercase
@@ -26,6 +28,10 @@
         &__description
             font-size: 1rem
 +max-screen(540px)
+    .offer
+        padding-bottom: 6.51%
+        &__block
+            transform: translateY(0)
     .offer-block
         background-image: none
         padding: 6.83760684%
