--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -3,7 +3,16 @@ body
 .container
     width: 1170px
     margin: 0 auto
-
+.section
+    padding: 8.547% 0
+    &:nth-child(2)
+        padding-bottom: 0px
+    &__title
+        margin-bottom: 8.547%
+        text-align: center
+        text-transform: uppercase
+        font-size: 1.875rem
+        +bold
 .bg-section
     background-color: $bg-section
 
