--- a/src/index.pug
+++ b/src/index.pug
@@ -10,4 +10,5 @@ html(lang="ru")
         include modules/header/header
         .main
             include modules/offer/offer
+            include modules/advantages/advantages
                 
