add catalog && adaptive

--- a/src/index.pug
+++ b/src/index.pug
@@ -11,4 +11,5 @@ html(lang="ru")
         .main
             include modules/offer/offer
             include modules/advantages/advantages
+            include modules/catalog/catalog
                 
