--- a/src/main.sass
+++ b/src/main.sass
@@ -30,6 +30,11 @@
 //*********************************************
 @import "modules/advantages/advantages"
 
+//*********************************************
+//		catalog
+//*********************************************
+@import "modules/catalog/catalog"
+
 
 
 //*********************************************
