add block articles && adaptive

--- a/src/main.sass
+++ b/src/main.sass
@@ -35,6 +35,11 @@
 //*********************************************
 @import "modules/catalog/catalog"
 
+//*********************************************
+//		articles
+//*********************************************
+@import "modules/articles/articles"
+
 
 
 //*********************************************
