--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -21,6 +21,8 @@ body
         font-size: 14px
     .container
         width: 990px
+        &--articles
+            width: 770px
 
 +max-screen(1024px)
     .container
