--- a/src/index.pug
+++ b/src/index.pug
@@ -12,4 +12,5 @@ html(lang="ru")
             include modules/offer/offer
             include modules/advantages/advantages
             include modules/catalog/catalog
+            include modules/articles/articles
                 
