add priceAndKind section && adaptive

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,4 +13,5 @@ html(lang="ru")
             include modules/advantages/advantages
             include modules/catalog/catalog
             include modules/articles/articles
+            include modules/priceAndKind/priceAndKind
                 
