--- a/src/main.sass
+++ b/src/main.sass
@@ -40,6 +40,11 @@
 //*********************************************
 @import "modules/articles/articles"
 
+//*********************************************
+//		priceAndKind
+//*********************************************
+@import "modules/priceAndKind/priceAndKind"
+
 
 
 //*********************************************
