--- a/src/modules/articles/articles.sass
+++ b/src/modules/articles/articles.sass
@@ -49,6 +49,8 @@
         width: 100%
         padding: 33px 0
         background-color: #ffffff
+    &:hover
+        box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.08)
 
 
 
