--- a/src/modules/button/button.sass
+++ b/src/modules/button/button.sass
@@ -51,6 +51,10 @@
 
     &--catalog
         padding: 2.5641% 2.82%
+
+    &--priceAndKind
+        width: 100%
+        padding: 19.5px 0
 +max-screen(1024px)
     .button--form
         line-height: 1.2
