--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -16,12 +16,17 @@ body
 .bg-section
     background-color: $bg-section
 
+
+
++max-screen(1280px)
+    .container--priceAndKind  
+        width: 760px
 +max-screen(1170px)
     html
         font-size: 14px
     .container
         width: 990px
-        &--articles
+        &--articles, &--priceAndKind
             width: 770px
 
 +max-screen(1024px)
