add section stages && adaptive

--- a/src/main.sass
+++ b/src/main.sass
@@ -45,6 +45,11 @@
 //*********************************************
 @import "modules/priceAndKind/priceAndKind"
 
+//*********************************************
+//		stages
+//*********************************************
+@import "modules/stages/stages"
+
 
 
 //*********************************************
