--- a/src/index.pug
+++ b/src/index.pug
@@ -14,4 +14,5 @@ html(lang="ru")
             include modules/catalog/catalog
             include modules/articles/articles
             include modules/priceAndKind/priceAndKind
+            include modules/stages/stages
                 
