add section slider, need some fix

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,4 +15,5 @@ html(lang="ru")
             include modules/articles/articles
             include modules/priceAndKind/priceAndKind
             include modules/stages/stages
+            include modules/slider/slider
                 
