--- a/src/main.sass
+++ b/src/main.sass
@@ -50,6 +50,10 @@
 //*********************************************
 @import "modules/stages/stages"
 
+//*********************************************
+//		slider
+//*********************************************
+@import "modules/slider/slider"
 
 
 //*********************************************
