slider fix, add dots

--- a/src/modules/slider/slider.pug
+++ b/src/modules/slider/slider.pug
@@ -30,6 +30,6 @@ section.section.slider
             a(title="next").slider__next &#10095
 
         .slider__dots
-            a.slider__dot
-            a.slider__dot
-            a.slider__dot
+            a(data-name="1").slider__dot.slider__dot--active
+            a(data-name="2").slider__dot
+            a(data-name="3").slider__dot
