--- a/src/modules/slider/slider.sass
+++ b/src/modules/slider/slider.sass
@@ -15,6 +15,7 @@
         position: relative
         left: 0
         flex-shrink: 0
+        transition: left .6s ease
     &__before,&__after
         width: 100%
         height: 100%
