add section comments && production + adaptive

--- a/src/_base/custom.sass
+++ b/src/_base/custom.sass
@@ -8,11 +8,13 @@ body
     &:nth-child(2)
         padding-bottom: 0px
     &__title
-        margin-bottom: 8.547%
+        margin-bottom: 8%
         text-align: center
         text-transform: uppercase
         font-size: 1.875rem
         +bold
+    &--comments
+        padding-bottom: 14.3229167%
 .bg-section
     background-color: $bg-section
 
