--- a/src/index.pug
+++ b/src/index.pug
@@ -16,4 +16,6 @@ html(lang="ru")
             include modules/priceAndKind/priceAndKind
             include modules/stages/stages
             include modules/slider/slider
+            include modules/comments/comments
+            include modules/production/production
                 
