--- a/src/main.sass
+++ b/src/main.sass
@@ -55,6 +55,16 @@
 //*********************************************
 @import "modules/slider/slider"
 
+//*********************************************
+//		comments
+//*********************************************
+@import "modules/comments/comments"
+
+//*********************************************
+//		production
+//*********************************************
+@import "modules/production/production"
+
 
 //*********************************************
 //		Small elements
