--- a/src/index.pug
+++ b/src/index.pug
@@ -17,5 +17,6 @@ html(lang="ru")
             include modules/stages/stages
             include modules/slider/slider
             include modules/comments/comments
+            include modules/whereIsCheaper/whereIsCheaper
             include modules/production/production
                 
