--- a/src/main.sass
+++ b/src/main.sass
@@ -65,6 +65,12 @@
 //*********************************************
 @import "modules/production/production"
 
+//*********************************************
+//		whereIsCheaper
+//*********************************************
+@import "modules/whereIsCheaper/whereIsCheaper"
+
+
 
 //*********************************************
 //		Small elements
