--- a/src/modules/button/button.sass
+++ b/src/modules/button/button.sass
@@ -58,7 +58,12 @@
 +max-screen(1024px)
     .button--form
         line-height: 1.2
++max-screen(770px)
+    .button--form
+        font-size: 10px
 +max-screen(540px)
     .catalog__button-group
         display: none
+    .button--form
+        font-size: 12px
       
