--- a/src/modules/form/form.sass
+++ b/src/modules/form/form.sass
@@ -1,4 +1,8 @@
 .form
+    &__text
+        margin-left: 45px
+        font-size: 17px
+        color: #596164
     &__row
         display: flex
         justify-content: flex-start
@@ -36,6 +40,8 @@
 
     .lft-b
         border-left-width: 1px
+    .mr-t
+        margin-top: 30px
 
 // Checked checkbox
 .form__checkbox:checked + .form__custom-checkbox
@@ -92,6 +98,8 @@
     .dropdown
         line-height: 1
 +max-screen(1024px)
+    .form__text
+        font-size: 14px
     .dropdown
         line-height: 1.1
         span
@@ -107,6 +115,9 @@
                 padding: 3px
 +max-screen(540px)
     .form
+        &__text
+            margin-left: 0
+            font-size: 10px
         &__row
             justify-content: center
             align-items: center
