--- a/src/modules/production/production.pug
+++ b/src/modules/production/production.pug
@@ -1,4 +1,4 @@
-section.section.production
+section.section.section--production.production
     .container
         h2.section__title О производстве
         .production-block
