add footer && map && adaptive

--- a/src/index.pug
+++ b/src/index.pug
@@ -19,4 +19,6 @@ html(lang="ru")
             include modules/comments/comments
             include modules/whereIsCheaper/whereIsCheaper
             include modules/production/production
-                
+            include modules/contacts/contacts
+        include modules/footer/footer
+            
