--- a/src/main.sass
+++ b/src/main.sass
@@ -70,6 +70,16 @@
 //*********************************************
 @import "modules/whereIsCheaper/whereIsCheaper"
 
+//*********************************************
+//		contacts
+//*********************************************
+@import "modules/contacts/contacts"
+
+//*********************************************
+//		footer
+//*********************************************
+@import "modules/footer/footer"
+
 
 
 //*********************************************
