--- a/src/modules/logo/logo.pug
+++ b/src/modules/logo/logo.pug
@@ -1,3 +1,3 @@
-a(href="#").logo
+a(href="#").logo.logo--footer
     strong.logo__title Фабрика скинали №1
     span.logo__description ведущий производитель скинали
