--- a/src/modules/logo/logo.sass
+++ b/src/modules/logo/logo.sass
@@ -13,7 +13,9 @@
     &__description
         color: $text-color-light
         font-size: 0.875rem
-
+    &--footer
+        .logo__title, .logo__description
+            color: #ffffff
 +max-screen(540px)
     .logo
         &__title
