--- a/src/modules/form/form.sass
+++ b/src/modules/form/form.sass
@@ -26,6 +26,8 @@
         border-left-width: 0
     
     &__checkbox
+        outline: none
+        border: none
         appearance: none
         -webkit-appearance: none
         -moz-appearance: none
